--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -94,8 +94,9 @@ handleSmallScreens()
       </div>
       <div class="navbar_btn_container">
         <button class="imm-btn collapse-btn" ng-init="collapseSideBar = true" ng-click="hideItems();">
-          <i ng-if="!thisHide" class="ri-arrow-left-s-line"></i>
-          <i ng-if="thisHide" class="ri-arrow-right-s-line"></i>
+          <i class="ri-menu-line"></i>
+          <!-- <i ng-if="!thisHide" class="ri-arrow-left-s-line"></i>
+          <i ng-if="thisHide" class="ri-arrow-right-s-line"></i> -->
         </button>
       </div>
       <!-- ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false" -->
