--- a/app/src/js/app/components/Apps/catalogs/easyWeb/views/easyWebFormView.html
+++ b/app/src/js/app/components/Apps/catalogs/easyWeb/views/easyWebFormView.html
@@ -90,7 +90,7 @@
                 <div class="imm-frm__fldgrp">
                     <div class="imm-frm__fld">
                         <label class="imm-frm__lbl">
-                            <table>
+                            <table class="imm-table">
                                 <thead>
                                     <th>Menu</th>
                                     <th>Link</th>
@@ -162,7 +162,7 @@
                 <div class="imm-frm__fldgrp">
                     <div class="imm-frm__fld">
                         <label class="imm-frm__lbl">
-                            <table>
+                            <table class="imm-table">
                                 <thead>
                                     <th>Slider</th>
                                     <th>IMAGE</th>
@@ -235,7 +235,7 @@
                 <div class="imm-frm__fldgrp">
                     <div class="imm-frm__fld">
                         <label class="imm-frm__lbl">
-                            <table>
+                            <table class="imm-table">
                                 <thead>
                                     <th>Section</th>
                                     <th>image</th>
@@ -317,7 +317,7 @@
                 <div class="imm-frm__fldgrp">
                     <div class="imm-frm__fld">
                         <label class="imm-frm__lbl">
-                            <table>
+                            <table class="imm-table">
                                 <thead>
                                     <th>Name</th>
                                     <th>Type</th>
@@ -390,7 +390,7 @@
                 <div class="imm-frm__fldgrp">
                     <div class="imm-frm__fld">
                         <label class="imm-frm__lbl">
-                            <table>
+                            <table class="imm-table">
                                 <thead>
                                     <th>Footer</th>
                                     <th>image</th>
