--- a/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
+++ b/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
@@ -199,7 +199,7 @@
         <div class="imm-frm__fld"></div>
       </div>
       <div class="imm-frm__fldgrp" ng-if='hosting.company == 1 && hosting.contact.length > 0'>
-        <table>
+        <table class="imm-table">
           <thead>
             <tr>
               <th>{{ 'Nombre' }}</th>
@@ -450,7 +450,7 @@
         <div class="imm-frm__fld"></div>
       </div>
       <div class="imm-frm__fldgrp" ng-if='hosting.products.length > 0'>
-        <table>
+        <table class="imm-table">
           <thead>
             <tr>
               <th>{{ 'Tipo' }}</th>
