--- a/app/src/js/app/components/Apps/catalogs/hosting/views/hostingsView.html
+++ b/app/src/js/app/components/Apps/catalogs/hosting/views/hostingsView.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="imm-wa__cnt">
-  <!-- <table>
+  <!-- <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'hosting.id' | translate }}</th>
