--- a/app/src/js/app/components/budgets/views/budgetsView.html
+++ b/app/src/js/app/components/budgets/views/budgetsView.html
@@ -57,7 +57,7 @@
 </div>
 
 <div class="imm-wa__cnt">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'budgets.clientName' | translate }}</th>
