--- a/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
+++ b/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
@@ -32,7 +32,7 @@
                         ng-click="addHorarioFijo(diaSeleccionado.selected.name, t)"> Agregar Horario
                     </button>
                 </div>
-                <table>
+                <table class="imm-table">
                     <thead>
                         <th>Dia</th>
                         <th>Horarios Elegidos</th>
