--- a/app/src/js/app/components/clients/views/clientsView.html
+++ b/app/src/js/app/components/clients/views/clientsView.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="imm-wa__cnt">
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th>{{ 'clients.id' | translate }}</th>
