--- a/app/src/js/app/components/hours-cost/views/hoursCostView.html
+++ b/app/src/js/app/components/hours-cost/views/hoursCostView.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="imm-wa__cnt">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'hours-cost.clientName' | translate }}</th>
