--- a/app/src/js/app/components/projects/views/project.task.modal.html
+++ b/app/src/js/app/components/projects/views/project.task.modal.html
@@ -130,7 +130,7 @@
     </div> -->
 <!-- 
     <div class="imm-frm__fldgrp">
-      <table>
+      <table class="imm-table">
         <thead>
           <tr>
             <th>{{ 'projects.id' | translate }}</th>
