--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -983,7 +983,7 @@
 </div>
 
 <div ng-if="userRole == 'admin'">
-  <table>
+  <table class="imm-table">
     <tr>
       <th>Cliente</th>
       <th>Horas Desarollo</th>
