--- a/app/src/js/app/components/tasks/taskManager/views/taskManagerEditView.html
+++ b/app/src/js/app/components/tasks/taskManager/views/taskManagerEditView.html
@@ -43,7 +43,7 @@
             <button class="imm-btn ng-binding" ng-click="addTask()">Agregar Tarea</button>
         </div>
     </div>
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th>{{ 'tasks.name' | translate }}</th>
