--- a/app/src/js/app/components/tasks/taskManager/views/taskManagerView.html
+++ b/app/src/js/app/components/tasks/taskManager/views/taskManagerView.html
@@ -15,7 +15,7 @@
                 chart-series="series" chart-colors="ColorBar"
                 chart-options="options" chart-dataset-override="DataSetOverride"></canvas>
     </div>
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
             	<th>{{ 'projects.project' | translate }}</th>
