--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
@@ -13,7 +13,7 @@
 </div>
 <div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">Para capturar tableros necesita agregar dentro de su tablero de Trello a lexart.brain. <a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;"> Ver paso a paso</a></div>
 <div class="imm-wa__cnt">
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th style="width: 6%;">{{ 'tasks_trello.id' | translate }}</th>
