--- a/app/src/js/app/components/tasks/task_automatic/views/task_automatic.modal.html
+++ b/app/src/js/app/components/tasks/task_automatic/views/task_automatic.modal.html
@@ -170,7 +170,7 @@
 
 
 <!--     <div class="imm-frm__fldgrp" ng-if="isAdmin=='true' || isClient=='true'">
-      <table>
+      <table class="imm-table">
         <thead>
           <tr>
             <th>{{ 'projects.id' | translate }}</th>
