--- a/app/src/js/app/components/tasks/task_automatic/views/task_automaticFormView.html
+++ b/app/src/js/app/components/tasks/task_automatic/views/task_automaticFormView.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="imm-frm__fldgrp" ng-if="task_automatic.fields.length">
-            <table>
+            <table class="imm-table">
                 <thead>
                     <tr>
                         <th>{{ 'tasks_automatic.field_name' | translate }}</th>
