--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -1,7 +1,5 @@
 <div class="imm-menu__wrp" ng-class="{'imm-menu__collapsed': thisHide == true}">
-
-    <nav class="imm-menu__nav" ng-class="{'imm-menu__collapsed': thisHide == true}">
-
+    <nav class="imm-menu__nav" >
         <div class="navbar-header">
             <button class="navbar-toggler" data-toggle="open-navbar1">
             <span></span>
