--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -165,7 +165,7 @@
 }
 
 .err-display {
-    color: red;
+    color: #DA2C38;
 }
 
 .pager {
@@ -178,7 +178,7 @@
 }
 
 .required {
-    color: red;
+    color: #DA2C38;
 }
 
 // PAGINATION
