--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -6,10 +6,11 @@
 
 table {
   padding: 10px;
-  font-size: 1.2rem;
+  // font-size: 1.2rem;
   border-radius: 5px;
 }
 
+.imm-table
 thead,
 tbody {
   padding: 10px;
@@ -45,6 +46,13 @@ tbody {
 }
 .imm-wa{
   transition: width .5s ease;
+}
+
+.moment-picker-input{
+  line-height: 1.4rem;
+  border-radius: 5px;
+  border: 1px solid @color-hollow-input;
+  padding: 7px;
 }
 
 //Modificador para darkMode
@@ -352,9 +360,9 @@ tbody {
     border-bottom: 2px solid @color-bk-dark-mode-third;
   }
 
-  tbody tr:hover {
-    background-color: @color-light-gray;
-  }
+  // tbody tr:hover {
+  //   background-color: @color-light-gray;
+  // }
 
   // table.imm-table tr:nth-child(odd) {
   //   background: @color-bk-dark-mode-secondary;
@@ -956,3 +964,39 @@ tbody {
   left: calc(20% - 7px);
 }
 
+.imm-button--loading .imm-btn__text {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.imm-button--loading {
+  cursor: not-allowed;
+}
+
+.imm-button--loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 1px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+
+  from {
+    transform: rotate(0turn);
+  }
+
+  to {
+    transform: rotate(1turn);
+  }
+
+}
