--- a/app/src/less/tables.less
+++ b/app/src/less/tables.less
@@ -59,13 +59,13 @@ th {
 
 td {
   padding: 10px;
-  font-size: 1rem;
+  // font-size: 1rem;
 }
 
 // tr:nth-child(odd) {
 //   background-color: @color-light-gray;
 // }
-tbody tr:hover {
+.imm-wa__cnt tbody tr:hover {
   background-color: @color-light-gray;
 }
 
