--- a/app/src/less/var.less
+++ b/app/src/less/var.less
@@ -53,7 +53,7 @@
 
 /* Status colors */
 @color-light-green: #79DB74;
-@color-green: #6cdac1;
+@color-green: #78BC61;
 // @color-yellow: #FFEC79;
 @color-yellow: #CFCF78;
 @color-orange: #FFB779;
