--- a/app/src/js/app/components/Apps/catalogs/products/views/productFormView.html
+++ b/app/src/js/app/components/Apps/catalogs/products/views/productFormView.html
@@ -237,7 +237,7 @@
 
       </div>
       <div class="imm-frm__fldgrp">
-        <table>
+        <table class="imm-table">
           <thead>
             <tr>
 
