--- a/app/src/js/app/components/banks/views/banksView.html
+++ b/app/src/js/app/components/banks/views/banksView.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="imm-wa__cnt">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'banks.id' | translate }}</th>
