--- a/app/src/js/app/components/finances/views/financesView.html
+++ b/app/src/js/app/components/finances/views/financesView.html
@@ -53,7 +53,7 @@
 </div>
 
 <div class="imm-wa__cnt" ng-show="itemTab == 1">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
@@ -96,7 +96,7 @@
 </div>
 
 <div class="imm-wa__cnt" ng-show="itemTab == 2">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
@@ -139,7 +139,7 @@
 </div>
 
 <div class="imm-wa__cnt" ng-show="itemTab == 3">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
@@ -185,7 +185,7 @@
   </table>
 </div>
 <div class="imm-wa__cnt" ng-show="itemTab == 4">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
@@ -234,7 +234,7 @@
 
 
 <div class="imm-wa__cnt" ng-show="itemTab == 5">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
