--- a/app/src/js/app/components/sales/views/salesView.html
+++ b/app/src/js/app/components/sales/views/salesView.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="imm-wa__cnt">
-  <table>
+  <table class="imm-table">
     <thead>
       <tr>
         <th>{{ 'Fecha' }}</th>
