--- a/app/src/js/app/components/tasks/Jira/views/jiraTaskView.html
+++ b/app/src/js/app/components/tasks/Jira/views/jiraTaskView.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="imm-wa__cnt">
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th>{{ 'ID tarea' }}</th>
