--- a/app/src/js/app/components/tasks/Jira/views/jiraView.html
+++ b/app/src/js/app/components/tasks/Jira/views/jiraView.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="imm-wa__cnt">
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th>{{ 'ID Tablero' }}</th>
