--- a/app/src/js/app/components/tasks/task_automatic/views/tasks_automaticView.html
+++ b/app/src/js/app/components/tasks/task_automatic/views/tasks_automaticView.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="imm-wa__cnt">
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
                 <th style="width: 6%;">{{ 'tasks_automatic.id' | translate }}</th>
