--- a/app/src/js/app/components/tasks/tasks/views/taskFormView.html
+++ b/app/src/js/app/components/tasks/tasks/views/taskFormView.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="imm-frm__fldgrp" ng-if="task.fields.length">
-            <table>
+            <table class="imm-table">
                 <thead>
                     <tr>
                         <th>{{ 'tasks.field_name' | translate }}</th>
