--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -119,7 +119,7 @@
       </div>
     </div>
   </div>
-    <table>
+    <table class="imm-table">
         <thead>
             <tr>
               <th>{{ 'users.month' | translate }}</th>
