--- a/app/src/less/buttons.less
+++ b/app/src/less/buttons.less
@@ -1,8 +1,8 @@
 // IMM-BTN
 
-.fc-agregarHorario-button {
-  display: none !important;
-}
+// .fc-agregarHorario-button {
+//   display: none !important;
+// }
 .lexart-btn {
   display: inline-block;
   padding: 0rem 1.2rem;
