fix - made field description mandatory, when crating a task

--- a/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
+++ b/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
@@ -83,7 +83,7 @@
                 <textarea rows="7" cols="50" ng-model="task.description">
 
                 </textarea>
-                <b class="lexart-frm__lbl-name">{{ 'tasks.description' | translate }}</b>
+                <b class="lexart-frm__lbl-name">{{ 'tasks.description' | translate }} <span class="required">*</span></b> 
             </label>
         </div>
 
