main height fixed

--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -2,6 +2,11 @@
 .lexart-wa {
   background: @color-light-gray;
   transition: width 1s ease;
+  height: auto;
+}
+.lexart-wa .lexart-wa__cnt section{
+  display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -687,6 +692,7 @@ tbody {
     color: @color-dark-mode;
     // background-color: @navbar-body-color;
   }
+
 
 }
 
