--- a/app/src/js/app/components/tasks/views/dashboardView.html
+++ b/app/src/js/app/components/tasks/views/dashboardView.html
@@ -15,7 +15,7 @@
                 <b class="lexart-wa__lbl">{{ 'Tareas Manuales' }}</b>
             </a>
         </div>
-        <!-- <div class="lexart-cstm__grid lexart-cstm__cntr">
+        <div class="lexart-cstm__grid lexart-cstm__cntr">
             <a ui-sref="app.tasks_automatic">
                 <div class="lexart-cstm__grid-25-two">
                     <img src="/assets/catalogos/cuentas.svg">
@@ -46,5 +46,5 @@
                 </div>
                 <b class="lexart-wa__lbl">{{ 'navigation.taskManager' | translate }}</b>
             </a>
-        </div> -->
+        </div>
 </div>
