--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -40,6 +40,7 @@
                     <input type='text' ng-model='modelProduct.hireDate'>
                 </div>
                 <div ng-show="itemTab == 1">
+                    <h2>{{currentTrack.id}}</h2>
                     <a ng-if="!timerRunning" class="btn_tracker_container" ng-click="startDashboardTrack(item, true)"><i class="ri-play-line"></i></a>
                     <a ng-if="timerRunning && currentTrack.idTask == item.idTask && currentTrack.id == item.id" class="btn_tracker_container tracking" ng-click="stopTrack()"><i class="ri-pause-line"></i></a>
                 </div>
