--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -75,3 +75,10 @@
         </tbody>
     </table>
 </div>
+<div
+    class="preload"
+    ng-show="loading" 
+    style="display: flex; justify-content:center; position: fixed;width: 100%;height: 100vh;background-color: #7a78782e;z-index: 10000; left:0;top:0"
+>
+  <img style=" width: 3%" src="assets/images/spinner.svg"></i>
+</div>
